<resources>
    <string name="app_name">SuperX</string>
    <string name="browser_search_hint">Search in DuckDuckGo or enter url</string>
    <string name="title_video">Video</string>
    <string name="title_progress">Progress</string>
    <string name="title_settings">Settings</string>
    <string name="dialog_video_title">Video found:</string>
    <string name="dialog_preview_video">Preview Video</string>
    <string name="dialog_download_video">Download Video</string>
    <string name="dialog_download_cancel">Cancel</string>
    <string name="video_empty_message">You have not downloaded any video yet.</string>
    <string name="video_menu_rename">Rename</string>
    <string name="video_menu_delete">Delete</string>
    <string name="video_menu_share">Share</string>
    <string name="video_rename_title">Rename video</string>
    <string name="video_rename_invalid">Invalid name. Please try again!</string>
    <string name="video_rename_exist">Video name already exists!</string>
    <string name="video_share_message">You don\'t have any video player app installed on your device</string>
    <string name="progress_empty_message">You are not downloading any video.</string>
    <string name="settings_general">General</string>
    <string name="settings_videos_folder">Videos folder</string>
    <string name="settings_clear_browser_cookies">Clear browser cookies</string>
    <string name="settings_message_open_folder">You don\'t have any file explorer app installed on your device</string>
    <string name="progress_menu_cancel">Cancel</string>
    <string name="app_download_channel_description">Background Download channel</string>
    <string name="all_text_cancel">Cancel</string>
    <string name="progress_menu_pause">pause</string>
    <string name="progress_menu_resume">resume</string>
    <string name="download_link_label">Video Url</string>
    <string name="view">View</string>
    <string name="paste">paste</string>
    <string name="history">History</string>
    <string name="share_link">Share Link</string>
    <string name="desktop_mode">Desktop Mode</string>
    <string name="searchbar_hint">Search</string>
    <string name="settings">Settings</string>
    <string name="about_an_hour_ago">about an hour ago</string>
    <string name="remove">remove</string>
    <string name="insert_your_regular_video">Paste your regular video url or M3U8 link here</string>
    <string name="title_media_link">Download by url</string>
    <string name="clear_history">Clear History</string>
    <string name="proxy">Proxy</string>
    <string name="proxies">Proxies</string>
    <string name="proxies_unavailable">Proxies unavailable</string>
    <string name="loading_image_view">loading image view</string>
    <string name="video_menu_open_in_folder">Open in folder</string>
    <string name="help">Help</string>
    <string name="ok">OK</string>
    <string name="get_started_guide">Hi ;–)  For video detecting go to video in browser, click play and waite until detected(can take 5–50 seconds) \n 1. You can change ads detecting threshold in settings \n 2. Some video downloaded corrupted in multi thread mode, use One thread for downloading in such situations \n\n For Video Downloading: \n \n 1. Press button,in dialog select resolution, if available, and press colored button \n \n 2, 3. Press Play on video player on page with video, after that video should be detected. \n \n If not try to press reload videos on video page or try reload page and repeat. \n If not email me.\n \n \n After downloading video available in app. \n</string>
    <string name="instruction">Hi ;–) \n For video detecting go to video in browser, click play and waite until video detected(can take 5–50 seconds) \n 1. You can change ads detecting threshold in settings \n 2. Video Detection not working for some web sites in mobile mode, try use desktop version of web site if video not detecting in mobile mode \n If not try to press reload videos on video page or try reload page and repeat. \n If not email me.\n \n\n For Video Downloading: \n \n 1. Press Download button,in appeared screen select resolution, if available \n \n 2. Press press download button. \n  \n \n After downloading video available in app. \n</string>
    <string name="new_tab">New Tab</string>
    <string name="cookies_cleared">Cookies cleared</string>
    <string name="download_started">   Video Download Started Successfully!!!   </string>
    <string name="download_open_in_app">Open in App</string>
    <string name="download_watch_in_app">Watch Video</string>
    <string name="ad_blocker">Ad Blocker</string>
    <string name="desktop_mode_on">Desktop Mode On</string>
    <string name="desktop_mode_off">Desktop Mode Off</string>
    <string name="player_resolution">video resolution as in the player</string>
    <string name="video_menu_open_with">Open with…</string>
    <string name="video_found">Video Found</string>
    <string name="show_video_found_alert">Show Video Download Dialog</string>
    <string name="dontshow">Don\'t show again</string>
    <string name="whatshould">What should we do?</string>
    <string name="dialog_preview_video_force">Preview Video Force</string>
    <string name="show_action_button">Show video download button</string>
    <string name="browser_s_icon">browser\'s icon</string>
    <string name="stop_and_save">Stop and Save</string>
    <string name="open_download_dialog_or_restart">Open download dialog or restart video check</string>
    <string name="video_title_edit">Video title edit</string>
    <string name="menu">menu</string>
    <string name="home">home</string>
    <string name="powerSave">Power save mode detected!\nVideo detection not working, turn off power save mode!</string>
    <string name="warning">Warning! Power save Mode.</string>
    <string name="download_text">download</string>
    <string name="check_every_request_on_video_mp4">Check every request on MP4 video</string>
    <string name="check_every_request_on_video_m3u8">Check every request on M3U8 or MPD video</string>
    <string name="find_videos_by_url">Check web-sites urls</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="found_videos_from">Found videos from %1$s</string>
    <string name="title">Title</string>
    <string name="ads_detection_treshold">Ads Detection Treshold: </string>
    <string name="thread_count_for_regular_files">Thread Count for regular files: </string>
    <string name="thread_count_for_hls_and_mpd">Thread Count for HLS and MPD: </string>
    <string name="lock_screen_orientation_portrait">Lock portrait screen orientation</string>
    <string name="regular_threads_count">Regular Threads Count:</string>
    <string name="m3u8_threads_count">M3U8 Threads Count:</string>
    <string name="downloads_location">Downloads Location</string>
    <string name="downloads_folder">Downloads folder</string>
    <string name="hidden_folder">Hidden folder</string>
    <string name="sd_app_folder">SD app folder</string>
    <string name="host_hint">Host</string>
    <string name="port_hint">Port</string>
    <string name="login_hint">User</string>
    <string name="password_hint">Password</string>
    <string name="save_proxy">Save</string>
    <string name="http_proxy">HTTP Proxy</string>
    <string name="check_if_in_list">Only check web-sites urls if in supported list</string>
    <string name="bookmark">Bookmark</string>
    <string name="bookmarks_list">Bookmarks</string>
    <string name="is_auto_dark">Auto Theme Mode</string>
    <string name="check_every_request_on_audio">Check every request on audio</string>
    <string name="go">GO</string>
    <string name="force_stream_downloading">Force Stream Download(for downloading regular(not m3u8 or mpd) live streams)</string>
    <string name="force_stream_detection">Force Stream Detection(Detection urls with body content length -1, sometimes used for regular live streams)</string>
    <string name="is_always_remux_regular_downloads">Postprocessing for all regular downloads</string>
    <string name="is_remux_only_live_regular_downloads">Postprocessing for only live downloads</string>
    <string name="is_interrupt_intrecepted_resources">Interrupt intrecepted media content for browser</string>
    <string name="location_hint">Enter URL or search keywords...</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="clear_field">Clear</string>
    <string name="request_storage">Allow access to device storage for "%1$s"?</string>
    <string name="request_storage_access">Allow third parties to access first party storage for "%1$s"?</string>
    <string name="request_geolocation">Share location with "%1$s"?</string>
    <string name="request_notification">Allow notifications for "%1$s"?</string>
    <string name="request_video">Share video with "%1$s"</string>
    <string name="request_audio">Share audio with "%1$s"</string>
    <string name="request_media">Share video and audio with "%1$s"</string>
    <string name="request_xr">Share WebXR displays with "%1$s"?</string>
    <string name="request_autoplay">Allow video to autoplay on "%1$s"?</string>
    <string name="request_media_key_system_access">Allow system media key access for "%1$s"?</string>
    <string name="media_back_camera">Back camera</string>
    <string name="media_front_camera">Front camera</string>
    <string name="media_microphone">Microphone</string>
    <string name="media_other">Unknown source</string>
    <string name="crash_native">Native</string>
    <string name="crash_java">Java</string>
    <string name="crash_content_native">Content (Native)</string>
    <string name="tracking_protection">Tracking Protection</string>
    <string name="tracking_protection_ex">TP exception</string>
    <string name="private_browsing">Private Browsing</string>
    <string name="global_privacy_control">Global Privacy Control</string>
    <string name="remote_debugging">Remote Debugging</string>
    <string name="forward">Forward</string>
    <string name="reload">Reload</string>
    <string name="crashed_title">GeckoView Example Crashed</string>
    <string name="crashed_text">Tap to report to Mozilla.</string>
    <string name="crashed_ignore">Ignore</string>
    <string name="crashed_report">Report</string>
    <string name="device_sharing_microphone">Microphone is on</string>
    <string name="device_sharing_camera">Camera is on</string>
    <string name="device_sharing_camera_and_mic">Camera and microphone are on</string>
    <string name="install_addon">Install Add-on...</string>
    <string name="install_addon_hint">Add-on URL: https://addons.mozilla.org/...</string>
    <string name="update_addon">Update Add-on</string>
    <string name="close_tab">Close tab</string>
    <string name="collapse">Collapse GV</string>
    <string name="slow_script">A script on this page is causing your web browser to run slowly</string>
    <string name="wait">Wait</string>
    <string name="stop">Stop</string>
    <string name="install">Install</string>
    <string name="cancel">Cancel</string>
    <string name="addon_uri">WebExtension xpi URL</string>
    <string name="save_pdf">Save as PDF</string>
    <string name="print_page">Print Page</string>
    <string name="translate">Translate</string>
    <string name="translate_restore">Restore to Original</string>
    <string name="translate_language_from_hint">From Language</string>
    <string name="translate_language_to_hint">To Language</string>
    <string name="translate_action">Translate</string>
    <string name="translate_manage">Manage Translate</string>
    <string name="translate_manage_languages">Languages</string>
    <string name="settings_detection">Detection Settings</string>
    <string name="settings_downloading">Downloading Settings</string>
    <string name="use_legacy_m3u8_detection">Use legacy m3u8/mpd detection(by youtube-dlp)</string>
</resources>