<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View" />
        <variable
            name="viewModel"
            type="com.myAllVideoBrowser.ui.main.settings.SettingsViewModel" />
    </data>

    <ScrollView
        android:id="@+id/settings_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?android:attr/colorBackground"
        android:clickable="true"
        android:focusable="true">

        <LinearLayout
            android:id="@+id/settings_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/padding_normal">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="-16dp"
                android:layout_marginTop="-16dp"
                app:title="@string/title_settings" />

            <!-- General Section -->
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_general"
                style="@style/TextAppearance.MaterialComponents.Headline6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/padding_small"
                android:paddingBottom="@dimen/padding_small"
                android:text="@string/settings_general" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_clear_cookie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:onClick="@{() -> viewModel.clearCookies()}"
                android:paddingVertical="@dimen/padding_small">

                <ImageView
                    android:id="@+id/iv_browser"
                    android:layout_width="@dimen/settings_icon_size"
                    android:layout_height="@dimen/settings_icon_size"
                    android:contentDescription="@string/browser_s_icon"
                    android:padding="@dimen/padding_small"
                    android:src="@drawable/public_24px"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/padding_small"
                    android:text="@string/settings_clear_browser_cookies"
                    android:textSize="@dimen/text_medium"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/iv_browser"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:id="@+id/divider_after_clear_cookie"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?attr/dividerHorizontal" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/is_auto_theme_check_box"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="@{viewModel.isAutoDarkMode}"
                android:text="@string/is_auto_dark"
                app:thumbTint="@color/colorAccent"
                app:trackDecorationTint="@color/colorAccentDark"
                app:trackTint="@color/color_gray" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/lock_orientation_check_box"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="@{viewModel.isLockPortrait}"
                android:text="@string/lock_screen_orientation_portrait"
                app:thumbTint="@color/colorAccent"
                app:trackDecorationTint="@color/colorAccentDark"
                app:trackTint="@color/color_gray" />

            <!-- Detection Section -->
            <com.google.android.material.textview.MaterialTextView
                style="@style/TextAppearance.MaterialComponents.Headline6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/padding_large"
                android:paddingBottom="@dimen/padding_small"
                android:text="@string/settings_detection" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/show_video_alert_check_box"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="@{viewModel.getVideoAlertState()}"
                android:text="@string/show_video_found_alert"
                app:thumbTint="@color/colorAccent"
                app:trackDecorationTint="@color/colorAccentDark"
                app:trackTint="@color/color_gray" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/show_video_action_button_check_box"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="@{viewModel.getVideoButtonState()}"
                android:text="@string/show_action_button"
                app:thumbTint="@color/colorAccent"
                app:trackDecorationTint="@color/colorAccentDark"
                app:trackTint="@color/color_gray" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/find_videos_by_url"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="@{viewModel.getIsFindVideoByUrl()}"
                android:text="@string/find_videos_by_url"
                app:thumbTint="@color/colorAccent"
                app:trackDecorationTint="@color/colorAccentDark"
                app:trackTint="@color/color_gray" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/is_check_every_request_on_mp4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="@{viewModel.getIsCheckEveryRequestOnMp4Video()}"
                android:text="@string/check_every_request_on_video_mp4"
                app:thumbTint="@color/colorAccent"
                app:trackDecorationTint="@color/colorAccentDark"
                app:trackTint="@color/color_gray" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/is_check_every_request_on_m3u8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="@{viewModel.isCheckIfEveryRequestOnM3u8}"
                android:text="@string/check_every_request_on_video_m3u8"
                app:thumbTint="@color/colorAccent"
                app:trackDecorationTint="@color/colorAccentDark"
                app:trackTint="@color/color_gray" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/is_check_every_request_on_audio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="@{viewModel.isCheckOnAudio}"
                android:text="@string/check_every_request_on_audio"
                app:thumbTint="@color/colorAccent"
                app:trackDecorationTint="@color/colorAccentDark"
                app:trackTint="@color/color_gray" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/is_force_stream_detection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="@{viewModel.isForceStreamDetection}"
                android:text="@string/force_stream_detection"
                app:thumbTint="@color/colorAccent"
                app:trackDecorationTint="@color/colorAccentDark"
                app:trackTint="@color/color_gray" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/is_use_legacy_m3u8_detection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="@{viewModel.isUseLegacyM3u8Detection}"
                android:text="@string/use_legacy_m3u8_detection"
                app:thumbTint="@color/colorAccent"
                app:trackDecorationTint="@color/colorAccentDark"
                app:trackTint="@color/color_gray" />

            <!-- Downloading Section -->
            <com.google.android.material.textview.MaterialTextView
                style="@style/TextAppearance.MaterialComponents.Headline6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/padding_large"
                android:paddingBottom="@dimen/padding_small"
                android:text="@string/settings_downloading" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/is_force_stream_downloading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="@{viewModel.isForceStreamDownloading}"
                android:text="@string/force_stream_downloading"
                app:thumbTint="@color/colorAccent"
                app:trackDecorationTint="@color/colorAccentDark"
                app:trackTint="@color/color_gray" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/is_always_remux_regular_downloads"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="@{viewModel.isAlwaysRemuxRegularDownloads}"
                android:text="@string/is_always_remux_regular_downloads"
                app:thumbTint="@color/colorAccent"
                app:trackDecorationTint="@color/colorAccentDark"
                app:trackTint="@color/color_gray" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/is_remux_only_live_regular_downloads"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="@{viewModel.isRemuxOnlyLiveRegularDownloads}"
                android:text="@string/is_remux_only_live_regular_downloads"
                app:thumbTint="@color/colorAccent"
                app:trackDecorationTint="@color/colorAccentDark"
                app:trackTint="@color/color_gray" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/is_interrupt_intrecepted_resources"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="@{viewModel.isInterruptIntreceptedResources}"
                android:text="@string/is_interrupt_intrecepted_resources"
                app:thumbTint="@color/colorAccent"
                app:trackDecorationTint="@color/colorAccentDark"
                app:trackTint="@color/color_gray" />

            <!-- Thread Count Section -->
            <LinearLayout
                android:id="@+id/regular_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_normal"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/regular_threads_count_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{@string/regular_threads_count(viewModel.regularThreadsCount)}"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
                    tools:text="Regular Download Threads: 4" />

                <SeekBar
                    android:id="@+id/seekBarRegular"
                    style="@style/Widget.AppCompat.SeekBar.Discrete"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:max="15"
                    android:min="1"
                    android:progress="@{viewModel.regularThreadsCount}" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/m3u8_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/m3u8_threads_count_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{@string/m3u8_threads_count(viewModel.m3u8ThreadsCount)}"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
                    tools:text="M3U8 Download Threads: 8" />

                <SeekBar
                    android:id="@+id/seekBarM3u8"
                    style="@style/Widget.AppCompat.SeekBar.Discrete"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:max="15"
                    android:progress="@{viewModel.m3u8ThreadsCount}" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ads_treshold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/ads_treshold_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{@string/ads_detection_treshold(viewModel.videoDetectionTreshold / (1024*1024))}"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
                    tools:text="Ads detection treshold is 4Mb" />

                <SeekBar
                    android:id="@+id/seekBarAdsTreshold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:max="@{50 * 1024 * 1024}"
                    android:progress="@{viewModel.videoDetectionTreshold}" />
            </LinearLayout>

            <!-- Storage Location Section -->
            <LinearLayout
                android:id="@+id/downloads_location_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_normal"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/downloads_location"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2" />

                <RadioGroup
                    android:id="@+id/storage_options"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/option_sd_card"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/downloads_folder" />

                    <RadioButton
                        android:id="@+id/option_hidden_folder"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/hidden_folder" />

                    <RadioButton
                        android:id="@+id/option_sd_app_folder"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sd_app_folder" />
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                tools:ignore="UselessLeaf" />
        </LinearLayout>
    </ScrollView>
</layout>
